# School-OS

./: .gitignore  .pre-commit-config.yaml  Dockerfile  FEATURES.md  INTEGRATION_GUIDE.md  Makefile  STUDENT_DETAIL_IMPLEMENTATION.md  attendance-chat.html  class-chat.html  login.html  marks-chat.html  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  razorpay-test.html  signup.html  subjects-chat.html  updated_config.json
backend/: .pre-commit-config.yaml  Dockerfile  add_events_module.py  cs.py  db_test.py  dummy_multi_agent  login.html  package-lock.json  pyproject.toml  pytest.ini  test_connection.py
backend/.github/workflows/: ci-cd.yml
backend/app/: dependencies.py  main.py
backend/app/agents/: api.py  api_with_jwt.py  base_agent.py  http_client.py  tool_context.py
backend/app/api/: deps.py
backend/app/core/: config.py  crypto_service.py  dependencies.py  metrics.py  security.py  storage.py  supabase.py
backend/app/db/: base.py  base_class.py  session.py
backend/app/middleware/: __init__.py  raw_body.py
backend/app/models/: __init__.py  academic_year.py  achievementPointRules.py  album.py  album_target.py  announcement.py  announcement_target.py  applied_discount.py  attendance_record.py  audit.py  cart.py  cart_item.py  class_attendance_weekly.py  class_fee_structure.py  class_model.py  club.py  club_activity.py  club_membership.py  conversation.py  conversation_participant.py  discount.py  employment_status.py  exam_type.py  exams.py  fee_component.py  fee_template.py  fee_template_component.py  fee_term.py  gateway_webhook_event.py  invoice.py  invoice_item.py  log.py  mark.py  media_item.py  message.py  order.py  order_item.py  package_item.py  payment.py  payment_allocation.py  (+20 more)
backend/app/schemas/: __init__.py  academic_year_schema.py  achievement_schema.py  album_schema.py  album_target_schema.py  announcement_schema.py  applied_discount_schema.py  attendance_record_schema.py  audit_schema.py  cart_schema.py  class_fee_structure_schema.py  class_schema.py  club_schema.py  communication_schema.py  discount_schema.py  employment_status_schema.py  enums.py  exam_schema.py  exam_type_schema.py  fee_component_schema.py  fee_template_schema.py  fee_term_schema.py  invoice_item_schema.py  invoice_schema.py  log_schema.py  mark_schema.py  media_item_schema.py  order_schema.py  payment_allocation_schema.py  payment_gateway_schema.py  payment_schema.py  period_schema.py  product_album_link_schema.py  product_category_schema.py  product_package_schema.py  product_schema.py  profile_schema.py  refund_schema.py  report_card_schema.py  school_schema.py  (+9 more)
backend/app/services/: __init__.py  academic_year_service.py  achievement_service.py  album_service.py  album_target_service.py  announcement_service.py  attendance_record_service.py  audit_service.py  cart_service.py  class_service.py  club_service.py  communication_service.py  discount_service.py  employment_status_service.py  exam_service.py  exam_type_service.py  fee_structure_service.py  fee_template_service.py  free_template_service.py  invoice_service.py  logging_service.py  mark_service.py  media_service.py  order_service.py  payment_gateway_service.py  payment_service.py  pdf_service.py  period_service.py  product_category_service.py  product_package_service.py  product_service.py  profile_service.py  refund_service.py  report_card_service.py  school_service.py  stream_service.py  student_contact_service.py  student_fee_assignment_service.py  student_service.py  subject_service.py  (+3 more)
backend/docs/: AUTHORIZED_PAYMENT_RECONCILIATION.md  CONCURRENCY_FIX_SUMMARY.md  CONCURRENCY_FIX_VISUAL_GUIDE.md  HTTP_AGENTS_IMPLEMENTATION_SUMMARY.md  HTTP_AGENTS_VERIFICATION_CHECKLIST.md  HTTP_BASED_AGENTS_ARCHITECTURE.md  HTTP_BASED_AGENTS_QUICK_REF.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  ROW_LEVEL_LOCKING_IMPLEMENTATION.md  ROW_LEVEL_LOCKING_SUMMARY.md  SECURITY_ENHANCEMENT_SUMMARY.md  WEBHOOK_SECURITY_LOGGING.md
backend/supabase/.temp/: cli-latest  pooler-url  postgres-version
backend/tests/: conftest.py  test_academic_years.py  test_achievements.py  test_agent_hierarchy.py  test_agentic_functions.py  test_albums.py  test_announcements.py  test_attendance.py  test_cart_service.py  test_cart_service2.py  test_cart_service3.py  test_cart_service4.py  test_cart_service5.py  test_classes.py  test_clubs.py  test_communications.py  test_employment_statuses.py  test_exams.py  test_fee_structure.py  test_invoice.py  test_main.py  test_marks.py  test_media.py  test_order_service.py  test_order_service2.py  test_order_service3.py  test_order_service4.py  test_order_service5.py  test_order_service6.py  test_order_service7.py  test_payment.py  test_periods.py  test_placeholder.py  test_product_service.py  test_product_service3.py  test_product_service4.py  test_product_service5.py  test_profiles.py  test_schools.py  test_student_contacts.py  (+8 more)
backend/tests/core/: test_crypto_service.py  (+1 more)
(+684 files in other folders)
