[tool.poetry]
name = "school-os"
version = "0.1.0"
description = "Backend for SchoolOS"
authors = ["Abhinav Mahesh Gurkar <161326385+uh-bhinav@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = {extras = ["all"], version = ">=0.117.1,<0.118.0"}
sqlalchemy = {extras = ["asyncpg"], version = ">=2.0.43,<3.0.0"}
psycopg2-binary = ">=2.9.10,<3.0.0"
python-dotenv = ">=1.1.1,<2.0.0"
supabase = ">=2.20.0,<3.0.0"
greenlet = "^3.2.4"
requests = "^2.32.5"
psycopg = {extras = ["binary"], version = "^3.2.10"}
pydantic = {extras = ["email"], version = "^2.11.10"}
python-jose = {extras = ["cryptography"], version = "^3.5.0"}

# Agentic Layer Dependencies
langchain = "^0.1.16"
langgraph = "^0.0.37"
langchain-groq = "^0.1.3"
langchain-mistralai = "^0.1.5"
langchain-google-genai = "^1.0.1"
langchain-community = "^0.0.34"

razorpay = "^2.0.0"
uuid7 = "^0.1.0"
slowapi = "^0.1.9"
sentry-sdk = {extras = ["fastapi", "sqlalchemy"], version = "^2.42.1"}
prometheus-fastapi-instrumentator = "^7.1.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.4.2,<9.0.0"
pytest-asyncio = ">=1.2.0,<2.0.0"
ruff = ">=0.13.2,<0.14.0"
black = ">=25.9.0,<26.0.0"
pre-commit = ">=4.3.0,<5.0.0"
pytest-dotenv = "^0.5.2"
httpx = {extras = ["http2"], version = "^0.28.1"}
asgi-lifespan = "^2.1.0"
pytest-mock = "^3.15.1"

[tool.pytest.ini_options]
dotenv_files = [
    ".env.test"
]
pythonpath = [
  "."
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 250
target-version = ["py311"]

[tool.ruff]
line-length = 250

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
